Añadido CSerpisGtk con TreeViewHelper

--- a/CCategoria/CCategoria/CCategoria.csproj
+++ b/CCategoria/CCategoria/CCategoria.csproj
@@ -42,6 +42,7 @@
     </Reference>
     <Reference Include="glade-sharp, Version=2.4.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f">
       <SpecificVersion>False</SpecificVersion>
+      <Package>glade-sharp-2.0</Package>
     </Reference>
     <Reference Include="pango-sharp, Version=2.4.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f">
       <Package>gtk-sharp-2.0</Package>
@@ -58,6 +59,9 @@
     <Reference Include="System.Data" />
     <Reference Include="CSerpis">
       <HintPath>..\..\CSerpis\CSerpis\bin\Debug\CSerpis.dll</HintPath>
+    </Reference>
+    <Reference Include="CSerpisGtk">
+      <HintPath>..\..\CSerpisGtk\CSerpisGtk\bin\Debug\CSerpisGtk.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
