--- a/CSerpisGtk/CSerpisGtk/CSerpisGtk.csproj
+++ b/CSerpisGtk/CSerpisGtk/CSerpisGtk.csproj
@@ -38,6 +38,7 @@
   <ItemGroup>
     <Compile Include="TreeViewHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WindowHelper.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
