CVentas propuesto EntityDao<TEntity> Enumerable y subida CVentas.dll

--- a/CVentas/CVentas/CVentas.csproj
+++ b/CVentas/CVentas/CVentas.csproj
@@ -28,6 +28,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Data" />
+    <Reference Include="CSerpis">
+      <HintPath>..\..\CSerpis\CSerpis\bin\Debug\CSerpis.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
